@@ -5,6 +5,7 @@ Amarok ChangeLog
 
 VERSION 2.4.1
   BUGFIXES:
+    * Relative paths support for XSPF playlists. (BR 264147)
     * Fix incorrect handling of "Various Artists" node by Collection Browser,
       now selection of this node returns "Various Artists" tracks instead of
       whole collection. (BR: 263255, BR: 269717)
